@@ -19,6 +19,7 @@ phpMyAdmin - ChangeLog
 - bug #3559925 [privileges] Incorrect updating of the list of users
 - bug #3561224 [edit] cell edit date field with empty date fills in current date
 - bug #3559955 [edit] current_date from function drop down fails on update
+- add support for Solaris and FreeBSD system load and memory display in server status
 
 3.5.2.2 (2012-08-12)
 - [security] Fixed XSS vulnerabilities, see PMASA-2012-4
